--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,7 @@
   --body-font: 'Spartan', sans-serif;
   --biggest-font-size: 3rem;
   --bigger-font-size: 2.5rem;
-  --big-font-size: 2rem;
+  --big-font-size: 1.75rem;
   --h1-font-size: 1.7rem;
   --h2-font-size: 1.35rem;
   --h3-font-size: 1.125rem;
@@ -116,7 +116,6 @@
 
 html {
   scroll-behavior: smooth;
-  /* background-color: var(--background-color); */
   transition: .4s background-color;
 }
 
@@ -188,11 +187,6 @@ span {
 }
 
 /*=============== LAYOUT ===============*/
-
-.main {
-  overflow: hidden; /* For animation and images*/
-}
-
 .grid {
   display: grid;
 }
@@ -204,7 +198,6 @@ span {
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
-  max-width: 350px;
 }
 
 .header__logo {
@@ -248,6 +241,7 @@ span {
   width: 68px;
   padding: 13px;
   cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .selector__button{
@@ -294,7 +288,7 @@ span {
 }
 
 .calculator__currentOperand {
-  font-size: var(--h1-font-size);
+  font-size: var(--big-font-size);
   color: var(--title-color);
 }
 
@@ -343,4 +337,47 @@ span {
   -moz-transition: none !important;
   -ms-transition: none !important;
   -o-transition: none !important;
+}
+
+/*=============== MEDIA QUERIES ===============*/
+/* For tine devices */
+@media screen and (max-width: 374px) {
+  * {
+    --big-font-size: 1.3rem;
+    --h1-font-size: 1.3rem;
+    --normal-font-size: .8rem;
+    --smallest-font-size: .60rem;
+  }
+
+  .calculator__body {
+    grid-template-columns: repeat(4, 45px);
+    grid-template-rows: repeat(5, 45px);
+    gap: var(--m-0-75);
+  }
+}
+
+/* For large devices */
+@media screen and (min-width: 1024px) {
+  * {
+    --big-font-size: 2.3rem;
+    --h1-font-size: 2rem;
+    --normal-font-size: 1.2rem;
+    --smallest-font-size: .80rem;
+  }
+
+  .header__selector {
+    gap: var(--m-0-25);
+  }
+
+  .calculator__previousOperand {
+    transform: translate(0px, -60px);
+  }
+  .calculator__result {
+    height: 120px;
+  }
+  .calculator__body {
+    grid-template-columns: repeat(4, 100px);
+    grid-template-rows: repeat(5, 60px);
+    gap: var(--m-1-5);
+  }
 }
